// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Checkbox Basic 1`] = `
<div
  className="css-905vkz"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="css-1mfehrt"
      display="inline-flex"
    >
      <input
        aria-checked={true}
        aria-describedby="4"
        checked={true}
        className="css-1xcp0l9"
        id="agreement-checkbox"
        name="checkbox"
        onChange={[Function]}
        type="checkbox"
      />
      <label
        className="css-1ruk2nu"
        display="block"
        htmlFor="agreement-checkbox"
      >
        <span
          className="css-ken708"
          display="flex"
        >
          <span
            className="css-1iwsffs"
            color="colorText"
            cursor="pointer"
            fontSize="fontSize30"
            fontWeight="fontWeightSemibold"
          >
            <span
              className="css-sncxrr"
              display="flex"
            >
              <span
                aria-hidden="true"
                className="css-19wqrcg"
                display="flex"
                height="sizeSquare50"
                type="checkbox"
                width="sizeSquare50"
              >
                <span
                  className="css-1belstp"
                  display="flex"
                  height="sizeSquare25"
                  transform="rotate(-45deg)"
                  width="sizeSquare30"
                />
              </span>
              <span
                className="css-36yo5t"
                color="currentColor"
                fontSize="fontSize30"
                fontWeight="fontWeightNormal"
              >
                I declare the information provided above is accurate. I acknowledge that Twilio will process the information provided above for the purpose of identity verification, and will be sharing it with my local telecomm providers or authorities where required by local law. I understand that Twilio phone numbers may be taken out of service for inaccurate or false information.
              </span>
            </span>
          </span>
        </span>
      </label>
    </div>
    <button
      aria-busy="false"
      className="css-xhwlne"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-1fh394q"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots FormInput Basic 1`] = `
<div
  className="css-905vkz"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1o3qgb0"
      display="block"
      htmlFor="emailAddress"
    >
      <span
        className="css-ken708"
        display="flex"
      >
        <span
          className="css-1iwsffs"
          color="colorText"
          cursor="pointer"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
        >
          Email Address
        </span>
      </span>
    </label>
    <div
      className="css-1kyjsrh"
      cursor="text"
      display="flex"
      width="100%"
    >
      <input
        className="css-1i43npz"
        id="emailAddress"
        name="emailAddress"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="example@twilio.com"
        type="email"
        value=""
      />
    </div>
    <button
      aria-busy="false"
      className="css-xhwlne"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-1fh394q"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots FormInput Number Input With Validation 1`] = `
<div
  className="css-905vkz"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1o3qgb0"
      display="block"
      htmlFor="positiveNumber"
    >
      <span
        className="css-ken708"
        display="flex"
      >
        <span
          className="css-1iwsffs"
          color="colorText"
          cursor="pointer"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
        >
          Positive Number
        </span>
      </span>
    </label>
    <div
      className="css-1kyjsrh"
      cursor="text"
      display="flex"
      width="100%"
    >
      <input
        aria-describedby="positiveNumberErrorHelpText"
        className="css-1i43npz"
        id="positiveNumber"
        name="positiveNumber"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="example@twilio.com"
        type="text"
      />
    </div>
    <button
      aria-busy="false"
      className="css-xhwlne"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-1fh394q"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots FormTextArea Basic 1`] = `
<div
  className="css-905vkz"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1o3qgb0"
      display="block"
      htmlFor="message"
    >
      <span
        className="css-ken708"
        display="flex"
      >
        <span
          className="css-12vwlii"
          color="colorText"
          fontSize="fontSize30"
        >
          <span
            className="css-5hdy7d"
          >
            Required: 
          </span>
        </span>
        <span
          className="css-1iwsffs"
          color="colorText"
          cursor="pointer"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
        >
          Message (at least 40 characters)
        </span>
      </span>
    </label>
    <div
      className="css-1kyjsrh"
      cursor="text"
      display="flex"
      width="100%"
    >
      <textarea
        async={true}
        className="css-wdzxzh"
        id="message"
        name="message"
        onBlur={[Function]}
        onChange={[Function]}
        placeholder="Enter message"
        rows={3}
        spellCheck={true}
        value=""
      />
    </div>
    <p
      className="css-1jrq539"
      color="colorText"
      fontSize="fontSize30"
    >
      0
       characters
    </p>
    <button
      aria-busy="false"
      className="css-nfjbme"
      color="colorTextInverse"
      cursor="not-allowed"
      disabled={true}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-1fh394q"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Full Form Full Form 1`] = `
<div
  className="css-905vkz"
>
  <div
    className="css-1irokx4"
    display="flex"
  >
    <div
      className="css-1s1sv6t"
      width="66.66666666666666%"
    >
      <h4
        className="css-1i8ga7z"
        color="colorText"
        display="block"
        fontSize="fontSize40"
        fontWeight="fontWeightSemibold"
      >
        formik-paste Form Demo
      </h4>
      <form
        onSubmit={[Function]}
      >
        <label
          className="css-1o3qgb0"
          display="block"
          htmlFor="emailAddress"
        >
          <span
            className="css-ken708"
            display="flex"
          >
            <span
              className="css-1iwsffs"
              color="colorText"
              cursor="pointer"
              fontSize="fontSize30"
              fontWeight="fontWeightSemibold"
            >
              Email Address
            </span>
          </span>
        </label>
        <div
          className="css-1kyjsrh"
          cursor="text"
          display="flex"
          width="100%"
        >
          <input
            className="css-1i43npz"
            id="emailAddress"
            name="emailAddress"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="example@twilio.com"
            type="email"
            value=""
          />
        </div>
        <label
          className="css-1o3qgb0"
          display="block"
          htmlFor="positiveNumber"
        >
          <span
            className="css-ken708"
            display="flex"
          >
            <span
              className="css-1iwsffs"
              color="colorText"
              cursor="pointer"
              fontSize="fontSize30"
              fontWeight="fontWeightSemibold"
            >
              Positive Number
            </span>
          </span>
        </label>
        <div
          className="css-1kyjsrh"
          cursor="text"
          display="flex"
          width="100%"
        >
          <input
            aria-describedby="positiveNumberErrorHelpText"
            className="css-1i43npz"
            id="positiveNumber"
            name="positiveNumber"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="example@twilio.com"
            type="text"
            value=""
          />
        </div>
        <label
          className="css-1o3qgb0"
          display="block"
          htmlFor="message"
        >
          <span
            className="css-ken708"
            display="flex"
          >
            <span
              className="css-12vwlii"
              color="colorText"
              fontSize="fontSize30"
            >
              <span
                className="css-5hdy7d"
              >
                Required: 
              </span>
            </span>
            <span
              className="css-1iwsffs"
              color="colorText"
              cursor="pointer"
              fontSize="fontSize30"
              fontWeight="fontWeightSemibold"
            >
              Message (at least 40 characters)
            </span>
          </span>
        </label>
        <div
          className="css-1kyjsrh"
          cursor="text"
          display="flex"
          width="100%"
        >
          <textarea
            async={true}
            className="css-wdzxzh"
            id="message"
            name="message"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="Enter message"
            rows={3}
            spellCheck={true}
            value=""
          />
        </div>
        <p
          className="css-1jrq539"
          color="colorText"
          fontSize="fontSize30"
        >
          0
           characters
        </p>
        <div
          className="css-1mfehrt"
          display="inline-flex"
        >
          <input
            aria-checked={false}
            aria-describedby="1"
            checked={false}
            className="css-1xcp0l9"
            id="checkbox"
            name="checkbox"
            onChange={[Function]}
            type="checkbox"
          />
          <label
            className="css-1ruk2nu"
            display="block"
            htmlFor="checkbox"
          >
            <span
              className="css-ken708"
              display="flex"
            >
              <span
                className="css-1iwsffs"
                color="colorText"
                cursor="pointer"
                fontSize="fontSize30"
                fontWeight="fontWeightSemibold"
              >
                <span
                  className="css-sncxrr"
                  display="flex"
                >
                  <span
                    aria-hidden="true"
                    className="css-19wqrcg"
                    display="flex"
                    height="sizeSquare50"
                    type="checkbox"
                    width="sizeSquare50"
                  >
                    <span
                      className="css-1belstp"
                      display="flex"
                      height="sizeSquare25"
                      transform="rotate(-45deg)"
                      width="sizeSquare30"
                    />
                  </span>
                  <span
                    className="css-36yo5t"
                    color="currentColor"
                    fontSize="fontSize30"
                    fontWeight="fontWeightNormal"
                  >
                    Checkbox
                  </span>
                </span>
              </span>
            </span>
          </label>
        </div>
        <fieldset
          className="css-9a3t89"
          id="campaign"
          name="campaign"
        >
          <legend
            className="css-1ruk2nu"
            display="block"
          >
            <span
              className="css-ken708"
              display="flex"
            >
              <span
                className="css-1iwsffs"
                color="colorText"
                cursor="pointer"
                fontSize="fontSize30"
                fontWeight="fontWeightSemibold"
              >
                When should your campaign run?
              </span>
            </span>
          </legend>
          <div
            className="css-1n0x17s"
          >
            <div
              className="css-17onuso"
              display="block"
            >
              <div
                className="css-19wtf25"
                display="inline-flex"
              >
                <input
                  aria-describedby="2"
                  aria-invalid={false}
                  checked={true}
                  className="css-l5ph6c"
                  clip="rect(0 0 0 0)"
                  disabled={false}
                  id="ongoing"
                  name="campaign"
                  onChange={[Function]}
                  overflow="hidden"
                  size="size0"
                  type="radio"
                  value="ongoing"
                />
                <label
                  className="css-1ruk2nu"
                  display="block"
                  htmlFor="ongoing"
                >
                  <span
                    className="css-ken708"
                    display="flex"
                  >
                    <span
                      className="css-1iwsffs"
                      color="colorText"
                      cursor="pointer"
                      fontSize="fontSize30"
                      fontWeight="fontWeightSemibold"
                    >
                      <span
                        className="css-sncxrr"
                        display="flex"
                      >
                        <span
                          aria-hidden="true"
                          className="css-qnpj9n"
                          display="flex"
                          height="sizeSquare50"
                          type="radio"
                          width="sizeSquare50"
                        >
                          <span
                            className="css-4g659b"
                            height="sizeSquare25"
                            width="sizeSquare25"
                          />
                        </span>
                        <span
                          className="css-36yo5t"
                          color="currentColor"
                          fontSize="fontSize30"
                          fontWeight="fontWeightNormal"
                        >
                          Run my ads as ongoing
                        </span>
                      </span>
                    </span>
                  </span>
                </label>
              </div>
            </div>
            <div
              className="css-17onuso"
              display="block"
            >
              <div
                className="css-19wtf25"
                display="inline-flex"
              >
                <input
                  aria-describedby="3"
                  aria-invalid={false}
                  checked={false}
                  className="css-l5ph6c"
                  clip="rect(0 0 0 0)"
                  disabled={false}
                  id="enddate"
                  name="campaign"
                  onChange={[Function]}
                  overflow="hidden"
                  size="size0"
                  type="radio"
                  value="enddate"
                />
                <label
                  className="css-1ruk2nu"
                  display="block"
                  htmlFor="enddate"
                >
                  <span
                    className="css-ken708"
                    display="flex"
                  >
                    <span
                      className="css-1iwsffs"
                      color="colorText"
                      cursor="pointer"
                      fontSize="fontSize30"
                      fontWeight="fontWeightSemibold"
                    >
                      <span
                        className="css-sncxrr"
                        display="flex"
                      >
                        <span
                          aria-hidden="true"
                          className="css-qnpj9n"
                          display="flex"
                          height="sizeSquare50"
                          type="radio"
                          width="sizeSquare50"
                        >
                          <span
                            className="css-4g659b"
                            height="sizeSquare25"
                            width="sizeSquare25"
                          />
                        </span>
                        <span
                          className="css-36yo5t"
                          color="currentColor"
                          fontSize="fontSize30"
                          fontWeight="fontWeightNormal"
                        >
                          Set a start and end date
                        </span>
                      </span>
                    </span>
                  </span>
                </label>
              </div>
            </div>
          </div>
        </fieldset>
        <label
          className="css-1o3qgb0"
          display="block"
          htmlFor="callbackMethod"
        >
          <span
            className="css-ken708"
            display="flex"
          >
            <span
              className="css-1iwsffs"
              color="colorText"
              cursor="pointer"
              fontSize="fontSize30"
              fontWeight="fontWeightSemibold"
            >
              Callback Method
            </span>
          </span>
        </label>
        <div
          className="css-1kyjsrh"
          cursor="text"
          display="flex"
          width="100%"
        >
          <div
            className="css-1p04ivx"
            display="flex"
            width="100%"
          >
            <select
              className="css-ujyp9m"
              data-not-selectize="true"
              id="callbackMethokd"
              onBlur={[Function]}
              onChange={[Function]}
              required={true}
              size={0}
              value="get"
            >
              <option
                className="css-1atvivh"
                value="get"
              >
                GET
              </option>
              <option
                className="css-1atvivh"
                value="post"
              >
                POST
              </option>
              <option
                className="css-1atvivh"
                value="put"
              >
                PUT
              </option>
            </select>
            <div
              className="css-o5gemw"
              display="inline-flex"
              pointerEvents="none"
              transform="translateY(-50%)"
            >
              <span
                className="css-1aruxn"
                color="colorTextIcon"
                display="block"
                size="sizeIcon30"
              >
                <svg
                  aria-hidden={true}
                  aria-labelledby="1"
                  height="100%"
                  role="img"
                  viewBox="0 0 24 24"
                  width="100%"
                >
                  <path
                    d="M8.293 10.293a1 1 0 011.32-.083l.094.083L12 12.585l2.293-2.292a1 1 0 011.32-.083l.094.083a1 1 0 01.083 1.32l-.083.094-3 3a1 1 0 01-1.32.083l-.094-.083-3-3a1 1 0 010-1.414z"
                    fill="currentColor"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </div>
          </div>
        </div>
        <button
          aria-busy="false"
          className="css-xhwlne"
          color="colorTextInverse"
          cursor="pointer"
          disabled={false}
          display="inline-block"
          fontFamily="fontFamilyText"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
          textDecoration="none"
          type="submit"
          width="auto"
        >
          <span
            aria-hidden="false"
            className="css-1fh394q"
            display="flex"
            opacity="1"
            textDecoration="inherit"
          >
            Submit
          </span>
        </button>
      </form>
    </div>
    <div
      className="css-xnxrih"
      width="33.33333333333333%"
    >
      <article
        className="css-1h7hihl"
      >
        <h4
          className="css-1i8ga7z"
          color="colorText"
          display="block"
          fontSize="fontSize40"
          fontWeight="fontWeightSemibold"
        >
          Formik Payload
        </h4>
        <pre
          className="css-etdf1q"
          color="colorText"
          fontSize="fontSize30"
          overflow="auto"
        >
          {
    "values": {
        "emailAddress": "",
        "positiveNumber": "",
        "message": "",
        "checkbox": false,
        "campaign": "ongoing",
        "callbackMethod": "get"
    },
    "errors": {},
    "touched": {},
    "isSubmitting": false,
    "isValidating": false,
    "submitCount": 0,
    "initialValues": {
        "emailAddress": "",
        "positiveNumber": "",
        "message": "",
        "checkbox": false,
        "campaign": "ongoing",
        "callbackMethod": "get"
    },
    "initialErrors": {},
    "initialTouched": {},
    "isValid": true,
    "dirty": false,
    "validateOnBlur": true,
    "validateOnChange": true,
    "validateOnMount": false
}
        </pre>
      </article>
    </div>
  </div>
</div>
`;

exports[`Storyshots RadioGroup Basic 1`] = `
<div
  className="css-905vkz"
>
  <form
    onSubmit={[Function]}
  >
    <fieldset
      className="css-9a3t89"
      id="campaign"
      name="campaign"
    >
      <legend
        className="css-1ruk2nu"
        display="block"
      >
        <span
          className="css-ken708"
          display="flex"
        >
          <span
            className="css-1iwsffs"
            color="colorText"
            cursor="pointer"
            fontSize="fontSize30"
            fontWeight="fontWeightSemibold"
          >
            When should your campaign run?
          </span>
        </span>
      </legend>
      <div
        className="css-1n0x17s"
      >
        <div
          className="css-17onuso"
          display="block"
        >
          <div
            className="css-19wtf25"
            display="inline-flex"
          >
            <input
              aria-describedby="5"
              aria-invalid={false}
              checked={true}
              className="css-l5ph6c"
              clip="rect(0 0 0 0)"
              disabled={false}
              id="ongoing"
              name="campaign"
              onChange={[Function]}
              overflow="hidden"
              size="size0"
              type="radio"
              value="ongoing"
            />
            <label
              className="css-1ruk2nu"
              display="block"
              htmlFor="ongoing"
            >
              <span
                className="css-ken708"
                display="flex"
              >
                <span
                  className="css-1iwsffs"
                  color="colorText"
                  cursor="pointer"
                  fontSize="fontSize30"
                  fontWeight="fontWeightSemibold"
                >
                  <span
                    className="css-sncxrr"
                    display="flex"
                  >
                    <span
                      aria-hidden="true"
                      className="css-qnpj9n"
                      display="flex"
                      height="sizeSquare50"
                      type="radio"
                      width="sizeSquare50"
                    >
                      <span
                        className="css-4g659b"
                        height="sizeSquare25"
                        width="sizeSquare25"
                      />
                    </span>
                    <span
                      className="css-36yo5t"
                      color="currentColor"
                      fontSize="fontSize30"
                      fontWeight="fontWeightNormal"
                    >
                      Run my ads as ongoing
                    </span>
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
        <div
          className="css-17onuso"
          display="block"
        >
          <div
            className="css-19wtf25"
            display="inline-flex"
          >
            <input
              aria-describedby="6"
              aria-invalid={false}
              checked={false}
              className="css-l5ph6c"
              clip="rect(0 0 0 0)"
              disabled={false}
              id="enddate"
              name="campaign"
              onChange={[Function]}
              overflow="hidden"
              size="size0"
              type="radio"
              value="enddate"
            />
            <label
              className="css-1ruk2nu"
              display="block"
              htmlFor="enddate"
            >
              <span
                className="css-ken708"
                display="flex"
              >
                <span
                  className="css-1iwsffs"
                  color="colorText"
                  cursor="pointer"
                  fontSize="fontSize30"
                  fontWeight="fontWeightSemibold"
                >
                  <span
                    className="css-sncxrr"
                    display="flex"
                  >
                    <span
                      aria-hidden="true"
                      className="css-qnpj9n"
                      display="flex"
                      height="sizeSquare50"
                      type="radio"
                      width="sizeSquare50"
                    >
                      <span
                        className="css-4g659b"
                        height="sizeSquare25"
                        width="sizeSquare25"
                      />
                    </span>
                    <span
                      className="css-36yo5t"
                      color="currentColor"
                      fontSize="fontSize30"
                      fontWeight="fontWeightNormal"
                    >
                      Set a start and end date
                    </span>
                  </span>
                </span>
              </span>
            </label>
          </div>
        </div>
      </div>
    </fieldset>
    <button
      aria-busy="false"
      className="css-xhwlne"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-1fh394q"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Select Basic 1`] = `
<div
  className="css-905vkz"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1o3qgb0"
      display="block"
      htmlFor="callbackMethod"
    >
      <span
        className="css-ken708"
        display="flex"
      >
        <span
          className="css-1iwsffs"
          color="colorText"
          cursor="pointer"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
        >
          Callback Method
        </span>
      </span>
    </label>
    <div
      className="css-1kyjsrh"
      cursor="text"
      display="flex"
      width="100%"
    >
      <div
        className="css-1p04ivx"
        display="flex"
        width="100%"
      >
        <select
          className="css-ujyp9m"
          data-not-selectize="true"
          id="callbackMethod"
          onBlur={[Function]}
          onChange={[Function]}
          required={true}
          size={0}
          value="get"
        >
          <option
            className="css-1atvivh"
            value="get"
          >
            GET
          </option>
          <option
            className="css-1atvivh"
            value="post"
          >
            POST
          </option>
          <option
            className="css-1atvivh"
            value="put"
          >
            PUT
          </option>
        </select>
        <div
          className="css-o5gemw"
          display="inline-flex"
          pointerEvents="none"
          transform="translateY(-50%)"
        >
          <span
            className="css-1aruxn"
            color="colorTextIcon"
            display="block"
            size="sizeIcon30"
          >
            <svg
              aria-hidden={true}
              aria-labelledby="2"
              height="100%"
              role="img"
              viewBox="0 0 24 24"
              width="100%"
            >
              <path
                d="M8.293 10.293a1 1 0 011.32-.083l.094.083L12 12.585l2.293-2.292a1 1 0 011.32-.083l.094.083a1 1 0 01.083 1.32l-.083.094-3 3a1 1 0 01-1.32.083l-.094-.083-3-3a1 1 0 010-1.414z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <button
      aria-busy="false"
      className="css-xhwlne"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-1fh394q"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;

exports[`Storyshots Select Select With On Change Callback 1`] = `
<div
  className="css-905vkz"
>
  <form
    onSubmit={[Function]}
  >
    <label
      className="css-1o3qgb0"
      display="block"
      htmlFor="callbackMethod"
    >
      <span
        className="css-ken708"
        display="flex"
      >
        <span
          className="css-1iwsffs"
          color="colorText"
          cursor="pointer"
          fontSize="fontSize30"
          fontWeight="fontWeightSemibold"
        >
          Callback Method
        </span>
      </span>
    </label>
    <div
      className="css-1kyjsrh"
      cursor="text"
      display="flex"
      width="100%"
    >
      <div
        className="css-1p04ivx"
        display="flex"
        width="100%"
      >
        <select
          className="css-ujyp9m"
          data-not-selectize="true"
          id="callbackMethod"
          onBlur={[Function]}
          onChange={[Function]}
          required={true}
          size={0}
          value="get"
        >
          <option
            className="css-1atvivh"
            value="get"
          >
            GET
          </option>
          <option
            className="css-1atvivh"
            value="post"
          >
            POST
          </option>
          <option
            className="css-1atvivh"
            value="put"
          >
            PUT
          </option>
        </select>
        <div
          className="css-o5gemw"
          display="inline-flex"
          pointerEvents="none"
          transform="translateY(-50%)"
        >
          <span
            className="css-1aruxn"
            color="colorTextIcon"
            display="block"
            size="sizeIcon30"
          >
            <svg
              aria-hidden={true}
              aria-labelledby="3"
              height="100%"
              role="img"
              viewBox="0 0 24 24"
              width="100%"
            >
              <path
                d="M8.293 10.293a1 1 0 011.32-.083l.094.083L12 12.585l2.293-2.292a1 1 0 011.32-.083l.094.083a1 1 0 01.083 1.32l-.083.094-3 3a1 1 0 01-1.32.083l-.094-.083-3-3a1 1 0 010-1.414z"
                fill="currentColor"
                fillRule="evenodd"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
    <button
      aria-busy="false"
      className="css-xhwlne"
      color="colorTextInverse"
      cursor="pointer"
      disabled={false}
      display="inline-block"
      fontFamily="fontFamilyText"
      fontSize="fontSize30"
      fontWeight="fontWeightSemibold"
      textDecoration="none"
      type="submit"
      width="auto"
    >
      <span
        aria-hidden="false"
        className="css-1fh394q"
        display="flex"
        opacity="1"
        textDecoration="inherit"
      >
        Submit
      </span>
    </button>
  </form>
</div>
`;
